--- a/TODO.txt
+++ b/TODO.txt
@@ -687,4 +687,13 @@ INFO:eval_bop19_pose:Evaluation took 25.45333743095398s.
 INFO:eval_bop19_pose:Done.
 
 
+--- upper sphere, no inplane rotations
+INFO:eval_bop19_pose:FINAL SCORES:
+INFO:eval_bop19_pose:- bop19_average_recall_vsd: 0.19292733564013845
+INFO:eval_bop19_pose:- bop19_average_recall_mssd: 0.225121107266436
+INFO:eval_bop19_pose:- bop19_average_recall_mspd: 0.4036678200692042
+INFO:eval_bop19_pose:- bop19_average_recall: 0.2739054209919262
+INFO:eval_bop19_pose:- bop19_average_time_per_image: 6.281392691135406
+INFO:eval_bop19_pose:Evaluation took 23.259764909744263s.
+INFO:eval_bop19_pose:Done.
 
